# cutio

./: Cargo.toml
src/: main.rs
src/ops/: clip_ops.rs  mod.rs  video_funcs.rs
src/renderer/: mod.rs  time_player_bridge.rs  timeline_renderer.rs
src/types/: media.rs  media_library.rs  mod.rs  playback_state.rs  project.rs  session.rs  timeline.rs  track.rs
src/ui/: app.rs  medialib.rs  mod.rs  timeline_widget.rs  track_widget.rs  video_player.rs
